more stdout/stderr/exitcode updates to RegisterTests